# OpenMPI-Dijkstra

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindCheck.cmake
datasets/: roadNet-test2.txt
datasets/random/: random01.txt  random02.txt  random04.txt  random05.txt  random06.txt
datasets/roadNet/: roadNet-test.txt
libs/star/: CMakeLists.txt
libs/star/include/: star.h
libs/star/src/: star.c
src/: CMakeLists.txt
src/parallel/: CMakeLists.txt  parallel_Dijkstra.c  parallel_Dijkstra_matrix.c  parallel_Dijkstra_star.c  parallel_Dijkstra_stolen.c  test2.c
src/sequential/: CMakeLists.txt  main.c  sequential_Dijkstra.c  sequential_Dijkstra.h  sequential_Dijkstra_matrix.c
src/utils/: CMakeLists.txt  generateRandomGraph.py  matrixutils.c  matrixutils.h  starutils.c  starutils.h  utils.c  utils.h
tests/: CMakeLists.txt  dijkstra_tests.c  seqdijkstra_tests.c  star_tests.c
